Updated Logic to simulate Concurrency and Race Condition